# flask_weather_app

./: .gitignore  config.py  package-lock.json  pyproject.toml  weather_app.py
flask_weather_app/: app.py
flask_weather_app/templates/: base.html  city.html  index.html
tests/: test_flask_weather_app.py
